fix classifing match

--- a/DuEasy.xcodeproj/xcshareddata/xcschemes/Dueasy_v2.xcscheme
+++ b/DuEasy.xcodeproj/xcshareddata/xcschemes/Dueasy_v2.xcscheme
@@ -29,6 +29,30 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CC00000000000040"
+               BuildableName = "Dueasy_v2Tests.xctest"
+               BlueprintName = "Dueasy_v2Tests"
+               ReferencedContainer = "container:DuEasy.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CCUI00000000000E"
+               BuildableName = "Dueasy_v2UITests.xctest"
+               BlueprintName = "Dueasy_v2UITests"
+               ReferencedContainer = "container:DuEasy.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
